# discord-ext-songbird

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml  create-wheelhouse.yml  msrv.yml
examples/: basic_voice.py
python/discord/ext/songbird/: __init__.py  _native.pyi  client.py  track.py
src/: bitrate.rs  client.rs  config.rs  connection.rs  constants.rs  error.rs  lib.rs
src/events/: mod.rs  track.rs
src/input/sources/: base.rs  file.rs  http.rs  mod.rs  raw.rs
src/tracks/: handle.rs  looping.rs  mod.rs  mode.rs
