[package]
name = "discord-ext-songbird"
version = "0.1.0"
authors = ["beerpsi <beerpsi@duck.com>"]
edition = "2021"
rust-version = "1.83"
readme = "README.md"
license = "MIT OR Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_native"
crate-type = ["cdylib"]

[features]
default = ["symphonia/all"]
abi3 = ["pyo3/abi3-py38"]

[dependencies]
async-trait = "0.1.89"
pyo3 = { version = "0.27.2", features = ["extension-module", "uuid"] }
pyo3-async-runtimes = { version = "0.27.2", features = ["tokio-runtime"] }
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls", "charset", "http2", "system-proxy"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["sync", "time"] }
uuid = "1.19.0"

[dependencies.songbird]
version = "0.5.0"
default-features = false
features = ["driver", "gateway", "rustls", "tungstenite"]

[dependencies.symphonia]
version = "0.5.5"
