[package]
name = "discord-ext-songbird"
version = "0.2.0-alpha.8"
authors = ["beerpsi <beerpsi@duck.com>"]
edition = "2021"
rust-version = "1.88"
readme = "README.md"
license = "MIT OR Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_native"
crate-type = ["cdylib"]

[features]
default = ["symphonia/all"]
abi3 = ["pyo3/abi3-py38"]

[dependencies]
async-trait = "0.1.89"
pyo3 = { version = "0.28.2", features = ["extension-module", "uuid"] }
pyo3-async-runtimes = { version = "0.28.0", features = ["tokio-runtime"] }
pyo3-log = "0.13.3"
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls", "charset", "http2", "system-proxy"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["sync", "time"] }
tracing = { version = "0.1.44", features = ["log"] }
uuid = "1.19.0"

[dependencies.songbird]
git = "https://github.com/serenity-rs/songbird.git"
branch = "next"
default-features = false
features = ["driver", "gateway", "rustls", "tungstenite"]

[dependencies.symphonia]
version = "0.5.5"
